[package]
name = "near-contract-standards"
version.workspace = true
authors = ["Near Inc <hello@near.org>"]
edition.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/near-contract-standards"
description = """
NEAR smart contracts standard library.
"""

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { path = "../near-sdk", version = "~5.15.1", default-features = false, features = [
    "legacy",
] }
impl-tools = "0.11"

[dev-dependencies]
near-sdk = { path = "../near-sdk", default-features = false, features = [
    "unit-testing",
] }

[features]
default = []
abi = ["near-sdk/__abi-generate"]
# Compile Sharded Fungible Token wallet-contract implementation
sft-wallet-impl = []
# Compile Sharded Fungible Token governed wallet-contract implementation
sft-wallet-governed-impl = ["sft-wallet-impl"]
# Compile FT-to-sFT minter-contract implementation
ft2sft-impl = []

[package.metadata.docs.rs]
features = ["abi"]
